gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "argocd.example.com"  # CHANGE THIS
      allowedRoutes:
        namespaces:
          from: Same
    
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "argocd.example.com"  # CHANGE THIS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: argocd-server-tls
      allowedRoutes:
        namespaces:
          from: Same
